Update French Version for HTML files ADD, BTN, CHAT, index, LOGIC, MATH1, MATH2, MATH3, PCG, RND, TICK
Updating French Version for files ADD.html, BTN.html, CHAT.html, index.html, LOGIC.html, MATH1.html, MATH2.html, MATH3.html, PCG.html, RND.html, TICK.html

--- a/fr/ADD.html
+++ b/fr/ADD.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Add from 1 to 100 - IchigoJam</title>
+<title>Additionner de 1 à 100 - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Add from 1 to 100 - IchigoJam</h1>
+<h1>Additionner de 1 à 100 - IchigoJam</h1>
 
 <section>
-Using "?", ask a "1+1" to computer.<br>
+En utilisant "?", demandez un "1+1" à l'ordinateur.<br>
 <div id="add1-1"></div><script>make15("add1-1", "?1+1")</script>
-It answered "2" with ENTER key. Then, how is "1+2"?
+Il a répondu "2" après qu'on ait appuyé sur la touche ENTREE. Alors, Faisons maintenat « 1+2 » ?
 <div id="add1-2"></div><script>make15("add1-2", "?1+2")</script>
 </section>
 
 <section>
-How many bowling pins are there in total?
+Combien y a-t-il de pin de bowling au total ?
 <div id="add1-3"></div><script>make15("add1-3", "?1+2+3+4")</script>
 10 pins.<br>
-What will happen if it increases by 1 column?<br>
-Using the up/left/right cursor keys, recycles a program!<br>
-Type "+5" by addition, and press ENTER key.
+Que se passera-t-il s'il augmente d'une colonne ?<br>
+En utilisant les touches curseur haut/gauche/droite, modifiez un programme !<br>
+Tapez "+5" par addition, et appuyez sur la touche ENTREE.
 <div id="add1-5"></div><script>make15("add1-5", "?1+2+3+4+5")</script>
-How is the result when adding 1 to 10 like this?
-Adding from 1 to 10 at this pace, how much is the answer?
+Comment est le résultat en ajoutant de 1 à 10, comme ceci ?
+En ajoutant de 1 à 10 à ce rythme, quelle est la réponse ?
 <div id="add1-6"></div><script>make15("add1-6", "?1+2+3+4+5+6+7+8+9+10")</script>
 </section>
 
 <section>
-What if is adding from 1 to 100, it seems like tough!?<br>
-So, the repeating command "FOR".
+Et si on additionne de 1 à 100, cela semble difficile !?<br>
+Donc, utilisons la commande répétitive "FOR".
 <div id="add1-7"></div><script>make15("add1-7", "FOR I=1 TO 100:?I:NEXT")</script>
-Prepare the variable "A", and let's get added more and more.
+Préparez la variable "A", et ajoutons de plus en plus.
 <div id="add1-8"></div>
 <script>make15("add1-8", f2s(function() {/*
 A=0
@@ -43,12 +43,12 @@ OK
 </section>
 
 <section>
-<b>Try it!</b><br>
-1. What is  the result by adding from 1 to 12?<br>
-2. What is  the result by adding from 1 to 20?<br>
-3. What is  the result by adding from 1 to 200?<br>
-4. What is  the result by adding from 1 to 300?<br>
-5. What is the limit of number that can calculate properly?<br>
+<b>Essayez-le!</b><br>
+1. Quel est le résultat en ajoutant de 1 à 12 ?<br>
+2. Quel est le résultat en ajoutant de 1 à 20 ?<br>
+3. Quel est le résultat en ajoutant de 1 à 200 ?<br>
+4. Quel est le résultat en ajoutant de 1 à 300 ?<br>
+5. Quelle est la limite du nombre qui peut calculer correctement?<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
