--- a/fr/RND.html
+++ b/fr/RND.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Make a dice / RND (RANDOM) - IchigoJam</title>
+<title>Faire un Dé / RND (RANDOM) - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Make a dice / RND (RANDOM)</h1>
+<h1>Faire un Dé / RND (RANDOM)</h1>
 
 <section>
-Let's make various dice!
+Faisons divers dés!
 <div id="list1"></div><script>make15("list1", "?RND(3)")</script>
-What kind of number appeared?<br>
-RND (random) is a dice that there are surfaces as much as the number in parenthese.
+Quel genre de numéro est apparu ?<br>
+RND (aléatoire) donne un dé qui a autant de surfaces que le nombre entre parenthèses.
 </section>
 
 <section>
-Type again and press the ENTER key!
+Tapez à nouveau et appuyez sur la touche ENTRÉE !
 <div id="list2"></div><script>make15("list2", "?RND(3)")</script>
-Did the displayed number change compared to the beginning?<br>
-Oh? But 3 does not come out?<br>
-This means that three numbers with 0 included will appear.<br>
-If a number in the parenthesis is 3, it is 3 numbers that are 0, 1, 2.
+Le nombre affiché a-t-il changé par rapport à celui du début ?<br>
+Oh? Mais le chiffre 3 ne sort pas ?<br>
+Cela signifie que seulement trois nombres possibles avec 0 inclus apparaîtront.<br>
+Si un nombre entre parenthèses est 3, ces 3 nombres sont 0, 1, 2.
 </section>
 
 <section>
 <div id="list3"></div><script>make15("list3", "?RND(5)")</script>
-You can also change the number in parentheses.
+Vous pouvez également modifier le nombre entre parenthèses.
 </section>
 
 <section>
-Do not want to put out 0?<br>
-Want to make the smallest number to 1 in the number that comes out?<br>
-In a case like that ...
+Vous ne voulez pas sortir 0 ?<br>
+Voulez-vous que le plus petit nombre soit 1 dans le nombre qui va sortir ?<br>
+Dans ce cas, faites ceci...
 <div id="red-1"></div><script>make15("red-1", "?RND(3)+1")</script>
-This is OK!<br>
-By adding 1 to 0 that was the smallest number, the smallest number in the number that comes out becomes 1.<br>
+C'est bon !<br>
+En ajoutant 1 à 0 qui était le plus petit nombre, le plus petit nombre du nombre qui sort devient 1.<br>
 </section>
 
 <section>
 <div id="red-2"></div><script>make15("red-2", "?RND(3)+3")</script>
-It can also change the smallest number out of the numbers that come out.
+Vous pouvez également changer le plus petit nombre parmi les nombres qui sortent.
 </section>
 
 <section>
-<b>Try it!</b><br>
-1. Let's display randomly any of the numbers from 0 to 6<br>
-2. Let's display randomly any of the numbers from 1 to 6<br>
-3. Let's display randomly any of the numbers from 10 to 20<br>
-4. Let's make a dice that brings out your favorite number<br>
+<b>Essayez-le!</b><br>
+1. Affichez au hasard l'un des nombres de 0 à 6<br>
+2. Affichez au hasard l'un des nombres de 1 à 6<br>
+3. Affichez au hasard l'un des nombres de 10 à 20<br>
+4. Faisons un dé qui fait ressortir votre numéro préféré<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
