--- a/fr/index.html
+++ b/fr/index.html
@@ -48,15 +48,15 @@ Cours de programmation<br>
 
 <section>
 Cours de Mathematiques<br>
-- <a href=ADD.html>Add from 1 to 100</a><br>
-- <a href=MATH1.html>Looking for a common multiple</a><br>
-- <a href=MATH2.html>Looking for common divisor</a><br>
-- <a href=MATH3.html>Rounding off</a><br>
+- <a href=ADD.html>Additionner de 1 à 100</a><br>
+- <a href=MATH1.html>Recherche de multiple commun</a><br>
+- <a href=MATH2.html>Recherche de diviseur commun</a><br>
+- <a href=MATH3.html>Arrondir</a><br>
 </section>
 
 <section>
-Ele-making course<br>
-- <a href=CHAT.html>Let's chat on a network!</a><br>
+Cour pour Relier deux ichigoJam <br>
+- <a href=CHAT.html>Discutons en réseau!</a><br>
 </section>
 
 <section>
