--- a/fr/MATH1.html
+++ b/fr/MATH1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Looking for a common multiple(Mathematics)</title>
+<title>Recherche de multiple commun(Mathématiques)</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 <script src="tokana.js"></script>
 </head><body>
 
-<h1>Looking for a common multiple(Mathematics) - IchigoJam</h1>
+<h1>Recherche de multiple commun(Mathématiques) - IchigoJam</h1>
 
 <section>
-Let's display the numbers from 1 to 100.
+Affichons les nombres de 1 à 100.
 <div id="step-1"></div>
 <script>make15("step-1", f2s(function() {/*
 10 FOR X=1 TO 100
@@ -16,11 +16,11 @@ Let's display the numbers from 1 to 100.
 30 WAIT 3
 40 NEXT
 */}))</script>
-With "FOR"/"NEXT" command, while incrementing a variable X by 1, repeat until it reaches 100.
+Avec la commande "FOR"/"NEXT", tout en incrémentant une variable X de 1, répétez jusqu'à ce qu'elle atteigne 100.
 </section>
 
 <section>
-Let's display only the multiples of 3 using the symbol "%" which calculates the remainder.
+Affichons les multiples de 3 à l'aide du symbole "%" qui calcule le reste.
 <div id="step-2"></div>
 <script>make15("step-2", f2s(function() {/*
 20 IF X%3=0 ?X
@@ -28,7 +28,7 @@ Let's display only the multiples of 3 using the symbol "%" which calculates the 
 </section>
 
 <section>
-When it displays also multiples of 5, use "OR" meaning "either".
+Lorsqu'il affiche également des multiples de 5, utilisez "OR" qui signifie "OU".
 <div id="step-3"></div>
 <script>make15("step-3", f2s(function() {/*
 20 IF X%3=0 OR X%5=0 ?X
@@ -36,31 +36,31 @@ When it displays also multiples of 5, use "OR" meaning "either".
 </section>
 
 <section>
-When it displays what it is a multiple of 3 and 5, use "AND" meaning "both".
+Lorsqu'il affiche que c'est un multiple de 3 et 5, utilisez "AND" signifiant "les deux".
 <div id="step-4"></div>
 <script>make15("step-4", f2s(function() {/*
 20 IF X%3=0 AND X%5=0 ?X
 */}))</script>
-This is "common multiple" of 3 and 5.<br>
-The first number 15 is "least common multiple".
+Il s'agit ici des "multiples communs" de 3 et 5.<br>
+Le premier nombre 15 est "le plus petit commun multiple".
 </section>
 
 <section>
-Let's display "common multiples" of 2 and 3 and 5
+Affichons des "multiples communs" de 2 et 3 et 5
 <div id="step-5"></div>
 <script>make15("step-5", f2s(function() {/*
 20 IF X%2=0 AND X%3=0 AND X%5=0 ?X
 */}))</script>
-There are 3 "common multiples", and 30 is the "least common multiple" between 1 and 100.
+Il y a 3 "multiples communs", et 30 est le "plus petit multiple commun" entre 1 et 100.
 </section>
 
 <section>
-<b>Try it!</b><br>
-1. Let's display the multiples of 7<br>
-2. Let's display the multiples of 13<br>
-3. Let's display both the multiples of 7 and multiples of 13<br>
-4. Let's display the multiples of 7 and 13<br>
-5. Let's rapidly count how many are common multiples of 3 and 7 from 1 to 1000<br>
+<b>Essayez-le!</b><br>
+1. Affichons les multiples de 7<br>
+2. Affichons les multiples de 13<br>
+3. Affichons les multiples de 7 et les multiples de 13<br>
+4. Affichons les multiples de 7 et 13<br>
+5. Comptons rapidement combien sont des multiples communs de 3 et 7 de 1 à 1000<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://ichigojam.github.io/print/en/ ">IchigoJam print</a> https://ichigojam.github.io/print/en/  
